# PYEleX

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build.yml  test.yml
pyelectron/: __init__.py
pyelectron/cli/: __init__.py
pyelectron/core/: __init__.py  app.py  process.py  window.py
pyelectron/dev/: __init__.py
pyelectron/ipc/: __init__.py  manager.py  protocol.py  router.py  security.py  transport.py
pyelectron/security/: __init__.py  permissions.py
pyelectron/state/: __init__.py  manager.py
pyelectron/utils/: __init__.py  config.py  errors.py  logging.py  platform.py
pyelectron/webview/: __init__.py  base.py  events.py  ipc_bridge.py  linux.py  macos.py  macos_backend.py  manager.py  policies.py  security.py  windows.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/performance/: __init__.py
tests/unit/: __init__.py  test_errors.py  test_init.py  test_ipc.py  test_process.py  test_webview.py
